<resources>
    <string name="app_name">Tips n Odds</string>
    <string name="tnt_pending">Pending</string>
    <string name="tnt_settled">Settled</string>
    <string name="send_to">Share App On</string>
    <string name="action_rate_app">Rate App</string>
    <string name="hello_world">Hello World</string>
    <string name="hello_tony">Hello_Tony</string>
    <string name="description">Description</string>
    <string name="clubs">Clubs</string>
    <string name="tips">Tips</string>
    <string name="under_2_5">under 2.5</string>
    <string name="odds">1.35</string>
    <string name="country">Country</string>
    <string name="refreshed">Refreshed</string>
    <string name="default_text">Refresh for data</string>
    <string name="data_unavailable_snack">Data Unavailable. Try again later.</string>
    <string name="refresh">Refresh</string>
    <string name="App_id">ca-app-pub-1488497497647050~3104706924</string>
    <string name="TipsnOdds_Banner">ca-app-pub-1488497497647050/1707864772</string>
    <string name="TipsnOdds_Banner_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="TipsnOdds_Interstitial">ca-app-pub-1488497497647050/8963005439</string>
    <string name="TipsnOdds_Interstitial_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rate_app">Rate App</string>
    <string name="not_now">Later</string>
    <string name="no">No</string>
    <string name="Submit_Feedback">Submit Feedback</string>
    <string name="Tell_us_where_to_improve">Tell us where to improve</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="title_activity_nav_d">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="try_again"><u>Try again</u></string>
    <string name="dismiss"><u>Dismiss</u></string>
    <string name="an_error_occured">An Error Occurred!!!!</string>
    <string name="signin_failed">Sign In Failed!!!!</string>
    <string name="verify_your_account_to_update_your_profile">Please verify your account</string>
    <string name="a_verification_link_has_been_sent_to_your_email">A verification link has been sent to your Email.</string>
    <string name="account_created_successfully">Account Created Successfully!!!!</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="display_name">Username</string>
    <string name="choose_image">CHOOSE IMAGE</string>
    <string name="update">UPDATE</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="update_username">Update Username</string>
    <string name="update_profile_pic">Update Profile Pic</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_password">Change Password</string>
    <string name="default_notification_channel_id">Change Password</string>
    <string name="support_us">Support Us</string>
    <string name="password_reset_successful">Password Reset Successful!!!</string>
    <string name="a_reset_link_has_been_sent_to_your_email">A reset link has been sent to your Email</string>
    <string name="click_the_link_to_change_your_password">Click the link to change your password.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_insert">InsertActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string-array name="country_arrays">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>A.Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>B.V. Island</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>B. Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>C. Verde</item>
        <item>C. Island</item>
        <item>CAR</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Ch. Taipei</item>
        <item>ColombiaB</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech</item>
        <item>DR Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican R.</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>England</item>
        <item>E. Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>G. Britain</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>G. Bissau</item>
        <item>Guinea</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>M. Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>N. Korea</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>P.N Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>St. Kitts</item>
        <item>St. Lucia</item>
        <item>St. Vincent</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome</item>
        <item>Saudi Arabia</item>
        <item>Scotland</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>S. Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Sol. Islands</item>
        <item>Somalia</item>
        <item>S. Africa</item>
        <item>S. Korea</item>
        <item>S. Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Gambia</item>
        <item>T. Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Tri And Tob</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>USA</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>UAE</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>V. Island</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>


    <string name="home">Home</string>
    <string name="tip">Tip</string>
    <string name="away">Away</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="count">Count</string>
    <string name="progress">Progress</string>


</resources>
