<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.gibatekpro.tipsnodds.Admin.frag_played">

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/grey_500"
        android:gravity="center_vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/progress_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/progress"
                    android:inputType="number"
                    android:maxLength="1"
                    android:layout_marginRight="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/home_club_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/home"
                                android:inputType="text"
                                android:maxLength="14" />

                            <EditText
                                android:id="@+id/tip_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/tip"
                                android:inputType="text" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/away_club_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/away"
                                android:inputType="text"
                                android:maxLength="14" />

                            <EditText
                                android:id="@+id/odds_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/odds"
                                android:inputType="text" />

                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/country_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/country"
                                android:inputType="text" />

                            <EditText
                                android:id="@+id/date_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/date"
                                android:inputType="date" />


                            <EditText
                                android:id="@+id/time_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/time"
                                android:inputType="time" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/country_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/count"
                                android:background="@color/colorPrimary"
                                android:textColor="@color/colorWhite" />


                            <Button
                                android:id="@+id/cal_button"
                                android:background="@color/colorPrimary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/date"
                                android:textColor="@color/colorWhite" />

                            <Button
                                android:id="@+id/submit_button"
                                android:background="@color/colorPrimary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/send"
                                android:textColor="@color/colorWhite" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/recycler_layout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/grey_300"
        android:gravity="center_vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/listTodo_played"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</LinearLayout>